k8s/components/external_ipsec_gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mpm-ingress-internal
  annotations:
    # Eventhough Kubernetes may throw a
    #   Warning: annotation "kubernetes.io/ingress.class" is deprecated, please use 'spec.ingressClassName' instead
    # we have to use this annotation in GKE, see
    # https://cloud.google.com/kubernetes-engine/docs/how-to/internal-load-balance-ingress#deploy-ingress
    kubernetes.io/ingress.class: gce-internal
spec:
  defaultBackend:
    service:
      name: mpm-backend-service
      port:
        number: 80
